home icons added

--- a/src/Applicants/Applicant_Home/Card/card.scss
+++ b/src/Applicants/Applicant_Home/Card/card.scss
@@ -12,9 +12,10 @@
     align-items: center;
 
 
-    .img {
+    img {
         height: 250px;
-        width: 200px;
-        background-color: gray;
+        width: 250px;
+        margin-bottom: 5px;
+        
     }
 }
