--- a/src/Applicants/Applicant_Home/Apl_Home/aplHome.scss
+++ b/src/Applicants/Applicant_Home/Apl_Home/aplHome.scss
@@ -1,11 +1,24 @@
 
 .apl-home {
 border: 1px solid black;
+height: 100vh;
     .candidates-cards {
+        width: 90%;
+        margin: 0 auto;
         margin-top: 10px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        
 
     }
+
+    .search {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 10px;
+        padding: 0 10px;
+    }
 }
+
