--- a/src/Admin/Wizard/SelectCompany/selectCompany.scss
+++ b/src/Admin/Wizard/SelectCompany/selectCompany.scss
@@ -17,6 +17,7 @@
             border: 1px solid black;
             border-top: none;
             padding: 3px;
+            cursor: pointer;
             
         }
     }
