applicant side done

--- a/src/Applicants/Candidate/AplReport/aplReport.scss
+++ b/src/Applicants/Candidate/AplReport/aplReport.scss
@@ -19,5 +19,9 @@
                     font-weight: 300;
                 }
             }
+
+            .see {
+                cursor: pointer;
+            }
         }
     }
