--- a/src/Admin/Wizard/SelectCandidate/selectCandidate.scss
+++ b/src/Admin/Wizard/SelectCandidate/selectCandidate.scss
@@ -3,6 +3,7 @@
 
     .select-candidate {
         margin-left: 20px;
+        margin-bottom: 30px;
         width: 100%;
         display: flex;
         flex-wrap: wrap;
