--- a/src/Applicants/Candidate/Candidate/candidate.scss
+++ b/src/Applicants/Candidate/Candidate/candidate.scss
@@ -1,5 +1,7 @@
 
 .candidates {
+    background-color: #A6D6D6;
+    height: 100vh;
     .info {
         display: flex;
         padding-top: 30px;
