--- a/src/Admin/Admin_Home/Report/report.scss
+++ b/src/Admin/Admin_Home/Report/report.scss
@@ -26,6 +26,7 @@
         p {
             margin-left: 2px;
             margin-right: 10px;
+            cursor: pointer;
         }
     }
     }
