--- a/src/Admin/Wizard/FillReport/fillReport.scss
+++ b/src/Admin/Wizard/FillReport/fillReport.scss
@@ -4,6 +4,7 @@
     width: 100%;
     margin-left: 30px;
     display: flex;
+    margin-bottom: 50px;
     .select {
         margin-right: 50px;
         padding-bottom: 20px;
