--- a/src/Applicants/Applicant_Home/Card/card.scss
+++ b/src/Applicants/Applicant_Home/Card/card.scss
@@ -3,13 +3,20 @@
     width: 300px;
     height: 300px;
     padding: 10px;
-    border: 1px solid black;
     margin-right: 50px;
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #A58FAA;
+    box-shadow: 1px 9px 14px -2px rgba(0,0,0,0.92);
+    
+    h3 {
+        color: whitesmoke;
+
+        
+    };
 
 
     img {
