--- a/src/Applicants/Candidate/AplReport/aplReport.scss
+++ b/src/Applicants/Candidate/AplReport/aplReport.scss
@@ -2,7 +2,7 @@
 
 
     .reports {
-        margin-top: 20px;
+        margin: 20px;
         .single-rep {
             display: flex;
             justify-content: space-between;
