--- a/src/Applicants/Applicant_Home/Apl_Home/aplHome.scss
+++ b/src/Applicants/Applicant_Home/Apl_Home/aplHome.scss
@@ -1,7 +1,7 @@
 
 .apl-home {
 background-color: #A6D6D6;
-height: 100vh;
+height: 100%;
     .candidates-cards {
         width: 90%;
         margin: 0 auto;
