--- a/src/Admin/Admin_Home/Report/report.scss
+++ b/src/Admin/Admin_Home/Report/report.scss
@@ -1,5 +1,6 @@
 
 .report {
+   
     margin-top: 20px;
 
     .adm-report {
@@ -8,6 +9,9 @@
     border: 1px solid black;
     padding: 5px;
     margin-bottom: 5px;
+    border-radius: 7px;
+    background-color: whitesmoke;
+   
 
     p {
         font-size: 20px;
