--- a/src/Admin/Wizard/CreateReport/createReport.scss
+++ b/src/Admin/Wizard/CreateReport/createReport.scss
@@ -18,12 +18,14 @@
             p {
                 margin-bottom: 10px;
                 font-size: 25px;
+                
             }
         }
 
    
         .stage {
-            width: 70%;
+            width: 80%;
+            margin-top: 100px;
             // display: flex;
             
             .cards {
@@ -37,5 +39,8 @@
     }
     
 
+    .bold {
+        font-weight: 700;
+    }
    
 }
