--- a/src/Applicants/Applicant_Home/Card/card.scss
+++ b/src/Applicants/Applicant_Home/Card/card.scss
@@ -9,11 +9,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #A58FAA;
+    // background-color: #A58FAA;
+    background-color: whitesmoke;
     box-shadow: 1px 9px 14px -2px rgba(0,0,0,0.92);
     
     h3 {
-        color: whitesmoke;
+        color: rgb(48, 48, 48);
 
         
     };
@@ -23,6 +24,7 @@
         height: 250px;
         width: 250px;
         margin-bottom: 5px;
+        // border: 1px solid black;
         
     }
 }
