--- a/src/Applicants/Candidate/AplReport/aplReport.scss
+++ b/src/Applicants/Candidate/AplReport/aplReport.scss
@@ -7,6 +7,8 @@
             display: flex;
             justify-content: space-between;
             border: 1px solid black;
+            background-color: whitesmoke;
+            border-radius: 5px;
             padding: 5px;
             margin-bottom: 5px;
 
