--- a/src/Applicants/Candidate/Candidate/candidate.scss
+++ b/src/Applicants/Candidate/Candidate/candidate.scss
@@ -5,9 +5,12 @@
     .info {
         display: flex;
         padding-top: 30px;
+        margin-bottom: 20px;
+        
     
         img {
             width: 300px;
+            margin-left: 5px;
         }
     
         .applicant-info {
@@ -16,6 +19,11 @@
             width: 100%;
             padding-top: 30px;
             padding-left: 30px;
+            margin: 0 5px;
+            // border: 1px solid black;
+            background-color: whitesmoke;
+            border-radius: 5px;
+            
     
             .about {
                 width: 50%;
@@ -44,7 +52,10 @@
         .content {
             width: 700px;
             height: 400px;
-            background-color: rgb(235, 235, 235);
+            // background-color: rgb(235, 235, 235);
+            background-color: rgb(255, 252, 224) ;
+            border-radius: 10px;
+            box-shadow: 5px 5px 10px 5px rgb(48, 48, 48);
             display: flex;
             flex-direction: column;
     
