--- a/src/Admin/Login/login.scss
+++ b/src/Admin/Login/login.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
 
 
     .login-card {
@@ -15,6 +16,7 @@
         justify-content: center;
         align-items: center;
         background-color: rgba(204, 204, 204, 0.582);
+        box-shadow: 1px 9px 14px -2px rgba(0,0,0,0.92);
         
 
         .email {
