--- a/src/Admin/Wizard/CreateReport/createReport.scss
+++ b/src/Admin/Wizard/CreateReport/createReport.scss
@@ -13,6 +13,8 @@
             input {
                 margin-bottom: 30px;
                 height: 30px;
+                border-radius: 12px;
+                outline: none;
             }
             
             p {
@@ -34,6 +36,23 @@
                 display: flex;
                 flex-wrap: wrap;
                 margin-left: 30px;
+            }
+
+            .btns {
+
+                button {
+                    border: 2px solid #152222;
+                    background-color: #557575;
+                    color: whitesmoke;
+                    padding: 10px;
+                    border-radius: 5px;
+                    cursor: pointer;
+
+                    &:hover {
+                        background-color: #fdfdc0;
+                        color: rgb(20, 20, 20);
+                    }
+                }
             }
         }
     }
