--- a/src/Admin/Wizard/SelectCandidate/CandidateCard/candidateCard.scss
+++ b/src/Admin/Wizard/SelectCandidate/CandidateCard/candidateCard.scss
@@ -7,7 +7,13 @@
     margin-bottom: 20px;
     display: flex;
     cursor: pointer;
-    background-color: rgb(245, 245, 245);
+    background-color: #ffffffc4;
+    border: 2px solid #152222;
+    border-radius: 5px;
+
+    &:hover {
+        box-shadow: 1px 7px 13px 5px rgba(0,0,0,0.30);
+    }
    
     img {
         height: 100%;
@@ -25,8 +31,9 @@
     
     }
 
+    .active {
+        background-color: #fdfdc0;
+    }
+
 }
 
-.active {
-    background-color: #A6D6D6;
-}
