--- a/src/Admin/Wizard/SelectCompany/CompanyCard/companyCard.scss
+++ b/src/Admin/Wizard/SelectCompany/CompanyCard/companyCard.scss
@@ -3,16 +3,20 @@
 
     p {
         font-size: 23px;
-        border: 1px solid black;
-        background-color: #ededd05b;
+        border: 2px solid #152222;
+        background-color: #ffffffb2;
         padding: 3px;
         cursor: pointer;
         margin-bottom: 3px;
         border-radius: 5px;
+        &:hover {
+            box-shadow: 1px 7px 13px 5px rgba(0,0,0,0.30);
+        }
         
     }
 
-    .active {
-        background-color: tomato;
-    }
+    
+}
+.active {
+    background-color: #cccc6afd;
 }
