--- a/src/Applicants/Applicant_Home/Card/card.scss
+++ b/src/Applicants/Applicant_Home/Card/card.scss
@@ -9,22 +9,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-color: #A58FAA;
-    background-color: whitesmoke;
-    box-shadow: 1px 9px 14px -2px rgba(0,0,0,0.92);
-    
+    background-color: rgb(53, 53, 53);
+    box-shadow: 1px 9px 14px -2px rgba(0,0,0,0.82);
+
+    &:hover {
+        box-shadow: 1px 9px 14px -2px #b8b84f44;
+    }
+
+   
     h3 {
-        color: rgb(48, 48, 48);
+        color: whitesmoke;
+        font-weight: 400;
 
         
     };
 
 
     img {
-        height: 250px;
-        width: 250px;
+        width: 100%;
         margin-bottom: 5px;
-        // border: 1px solid black;
+        border: 1px solid black;
         
     }
 }
