--- a/src/Applicants/Candidate/Candidate/candidate.scss
+++ b/src/Applicants/Candidate/Candidate/candidate.scss
@@ -1,6 +1,5 @@
 
 .candidates {
-    background-color: #A6D6D6;
     height: 100vh;
     .info {
         display: flex;
@@ -29,12 +28,20 @@
                 width: 50%;
     
                 p {
-                    color: gray;
+                    color: rgb(77, 76, 76);
+                   
                 }
             }
             
         }
+
+        
     }
+
+    .rep {
+        font-size: 25px;
+    }
+
 
 
 
