--- a/src/Common/Header/header.scss
+++ b/src/Common/Header/header.scss
@@ -5,14 +5,31 @@
     justify-content: space-between;
     align-items: center;
     padding: 5px;
-    background-color: #EDEDD0;
+    background-color: #fdfdc0;
+    height: 60px;
+    box-shadow: 1px 7px 13px 5px rgba(0,0,0,0.30);
+
+
     button {
-        height: 20px;
+        padding-top: 4px;
+        height: 25px;
+        text-align: center;
+        margin-left: 5px;
+        padding-bottom: 10px;
+        background-color:#b8b84f;
+        border: none;
+        color:white;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #7f9b9b;
+            color: #EDEDD0;
+        }
     }
 }
 
 .adm {
-    background-color: #EDEDD0;
+    background-color: #fdfdc0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,7 +52,7 @@
         cursor: pointer;
 
         &:hover {
-            background-color: #907FA4;
+            background-color: #7f9b9b;
             color: #EDEDD0;
         }
 
