--- a/src/home.scss
+++ b/src/home.scss
@@ -1,4 +1,5 @@
 .homePage {
+  margin-top: 50px;
     h1 {
         text-align: center;
       }
@@ -8,12 +9,21 @@
         display: flex;
         justify-content: center;
         
+        a {
+          text-decoration: none;
+        }
+        
     
         .link {
           height: 300px;
           width: 300px;
           border: 1px solid black;
           margin-right: 5px;
+          background-color: rgb(53, 53, 53);
+          box-shadow: 1px 9px 14px -2px rgba(0,0,0,0.92);
+
+          
+          
         }
     
         img {
@@ -24,6 +34,8 @@
 
         h2 {
           text-align: center;
+          color: whitesmoke;
+          font-weight: 400;
         }
       }
   }
