--- a/src/Admin/Login/login.scss
+++ b/src/Admin/Login/login.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     
+    
 
 
     .login-card {
@@ -17,14 +18,21 @@
         align-items: center;
         background-color: rgba(204, 204, 204, 0.582);
         box-shadow: 1px 9px 14px -2px rgba(0,0,0,0.92);
+        border-radius: 14px;
         
 
         .email {
-            padding: 30px;
+            padding: 15px;
         }
 
-        button {
-            margin-top: 30px;
+        .btns {
+            display: flex;
+            flex-direction: column;
+            margin-right: 20px;
+            
+            button {
+                margin-bottom: 5px;
+            }
         }
         
 
