--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
 body {
   width: 80%;
   margin: 0 auto;
-  background-color: #557575;
+  background-color: #7a9e9e;
   // background-color: #6fbdbd;
   
 }
