--- a/src/Applicants/Candidate/AplReport/aplReport.scss
+++ b/src/Applicants/Candidate/AplReport/aplReport.scss
@@ -2,14 +2,14 @@
 
 
     .reports {
-        margin: 20px;
+        margin-top: 20px;
         .single-rep {
             display: flex;
             justify-content: space-between;
             border: 1px solid black;
             background-color: whitesmoke;
-            border-radius: 5px;
-            padding: 5px;
+            border-radius: 10px;
+            padding: 10px;
             margin-bottom: 5px;
 
             p {
