--- a/src/Common/Header/header.scss
+++ b/src/Common/Header/header.scss
@@ -1,24 +1,34 @@
 
 
 .apl {
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
-    background-color: #fdfdc0;
-    height: 60px;
+    padding: 20px;
+    // background-color: #ffffb0;
+    background-color: rgb(53, 53, 53);
+    color: #cccc6afd;
+    height: 80px;
     box-shadow: 1px 7px 13px 5px rgba(0,0,0,0.30);
+
+    h2 {
+        font-weight: 400;
+        letter-spacing: 3px;
+    }
 
 
     button {
-        padding-top: 4px;
+        padding: 8px;
+        margin-bottom: 25px;
         height: 25px;
         text-align: center;
         margin-left: 5px;
-        padding-bottom: 10px;
-        background-color:#b8b84f;
+        padding-bottom: 20px; 
+        background-color:#cccc6afd;
+        border-radius: 5px;
         border: none;
-        color:white;
+        color:rgb(53, 53, 53);
         cursor: pointer;
 
         &:hover {
@@ -29,26 +39,33 @@
 }
 
 .adm {
-    background-color: #fdfdc0;
+    background-color: rgb(53, 53, 53);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
+    padding: 20px;
+    height: 80px;
     box-shadow: 1px 7px 13px 5px rgba(0,0,0,0.30);
 
     h2 {
-        font-weight: 400;
+        font-weight: 500;
+        color: #cccc6afd;
+        letter-spacing: 2px;
+        
+       
     }
 
     button {
-        padding-top: 4px;
+        padding: 8px;
+        margin-bottom: 25px;
+        padding-bottom: 20px; 
         height: 25px;
         text-align: center;
         margin-left: 5px;
-        padding-bottom: 10px;
-        background-color:#b8b84f;
+        background-color: #cccc6afd;
+        border-radius: 5px;
         border: none;
-        color:white;
+        color:rgb(53, 53, 53);
         cursor: pointer;
 
         &:hover {
