--- a/src/Admin/Wizard/CreateReport/createReport.scss
+++ b/src/Admin/Wizard/CreateReport/createReport.scss
@@ -47,9 +47,10 @@
                     padding: 10px;
                     border-radius: 5px;
                     cursor: pointer;
+                    margin-left: 20px;
 
                     &:hover {
-                        background-color: #fdfdc0;
+                        background-color: #cccc6afd;
                         color: rgb(20, 20, 20);
                     }
                 }
