--- a/src/Admin/Wizard/FillReport/fillReport.scss
+++ b/src/Admin/Wizard/FillReport/fillReport.scss
@@ -14,8 +14,14 @@
     }
 
     textarea {
-        margin-left: 50px;
+        margin-left: 10px;
         width: 800px;
+        height: 110px;
+        margin-top: 19px;
+    }
+
+    input, select{
+        width: 150px;
     }
 }
 
